[package]
name = "vnc-rs"
version = "0.6.0"
edition = "2021"
authors = [
    "Xuanjun Wen <wenxuanjun@yahoo.com>",
    "Jovi Hsu <jv.hsu@outlook.com>",
    "Petr Beneš <petr.benes@gendigital.com>",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/HsuJv/vnc-rs"
homepage = "https://github.com/HsuJv/vnc-rs"
documentation = "https://docs.rs/vnc-rs"
description = "An async implementation of VNC client side protocol"
keywords = ["vnc"]

[lib]
name = "vnc"
path = "src/lib.rs"

[[example]]
name = "vncviewer"
[[example]]
name = "vncviewer_winit"

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"
codegen-units = 1

[dependencies]
thiserror = "2.0.12"
flate2 = "1.1.2"
tracing = { version = "0.1", features = ["log"] }

futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = "0.1"

rustls = "0.23"
tokio-rustls = "0.26"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.tokio]
version = "1"
features = ["sync", "macros", "io-util", "rt", "time"]

[dev-dependencies]
anyhow = "1"
argh = "0.1.13"
minifb = "0.28.0"
tracing-subscriber = { version = "0.3" }

[dev-dependencies.winit]
version = "0.30.10"
features = ["rwh_06", "x11", "wayland"]
default-features = false

[dev-dependencies.softbuffer]
version = "0.4.6"
features = ["x11", "wayland"]
default-features = false
